<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Upload_Recipe">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:padding="30dp"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_food_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/img_index" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_recipe"
            android:textSize="19sp"
            android:layout_marginTop="20dp"
            android:id="@+id/edt_recipe_name"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_description"
            android:layout_marginTop="10dp"
            android:textSize="19sp"
            android:id="@+id/edt_description"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_price"
            android:layout_marginTop="10dp"
            android:textSize="19sp"
            android:id="@+id/edt_price"
            />

        <Button
            android:id="@+id/btn_select_img"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="btnSelectImage"
            android:text="@string/btn_selectImage"
            android:textColor="#ffffff"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btn_upload_img"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="btnUploadRecipe"
            android:text="@string/btn_uploadImage"
            android:textColor="#ffffff"
            android:textSize="22sp" />








    </LinearLayout>

</ScrollView>