<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/myCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="3dp"
        android:layout_margin="4dp"
        app:cardUseCompatPadding="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/ivImage"
                android:adjustViewBounds="true"
                android:scaleType="fitStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/img_pilau" />

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">

                  <LinearLayout
                      android:orientation="vertical"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content">
                      <TextView
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/tv_Title"
                          android:textSize="18sp"
                          android:maxLines="1"
                          android:id="@+id/tvTitle"
                          />

                      <TextView
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/tv_Description"
                          android:textSize="18sp"
                          android:maxLines="1"
                          android:id="@+id/tvDesription"
                          />

                      <TextView
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/tv_Price"
                          android:textSize="25sp"
                          android:textAlignment="center"
                          android:layout_gravity="center"
                          android:textColor="@color/colorPrimary"
                          android:id="@+id/tvPrice"
                          android:textStyle="bold|italic"/>
                  </LinearLayout>



               </LinearLayout>



            </LinearLayout>




    </androidx.cardview.widget.CardView>

</LinearLayout>